# LOLIB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-all-mingw32.bat
lolib-api/: CMakeLists.txt
lolib-cli/: CMakeLists.txt
notes/: README  idea  lol-behavior
